--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ html{
 }
 a{
     text-decoration: none;
-
 }
 .container{
     min-height: 100vh;
@@ -19,7 +18,23 @@ a{
     align-items: center;
     justify-content: center;
 }
-
+img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+p{
+    color: white;
+    text-align-last: left;
+    font-size: 1.4rem;
+    line-height: 1.9rem;
+    color: black;
+    font-size: 1.4rem;
+    margin-top: 5px;
+    line-height: 2.5rem;
+    font-weight: 300;
+    letter-spacing: .05rem;
+}
 #hero{
     background-image: url(../img/hero-bg.png);
     background-size: cover;
@@ -116,7 +131,7 @@ a{
     font-size: 4rem;
     font-weight: 300;
     color: black;
-    margin-bottom: 10px;
+    margin-bottom: 10px; 
     text-transform: uppercase;
     letter-spacing: .2rem;
     text-align: center;
@@ -124,18 +139,13 @@ a{
 #services .section-title span{
     color: crimson;
 }
-#services .service-top p{
-    font-size: 1.4rem;
-    margin-top: 5px;
-    line-height: 2.5rem;
-    font-weight: 300;
-    letter-spacing: .05rem;
-}
+
 #services .service-bottom{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    margin-top: 50px;
 }
 #services .service-item{
     flex-basis: 80%;
@@ -149,6 +159,7 @@ a{
     margin: 10px 5%;
     position: relative;
     z-index: 1;
+    overflow: hidden;
 }
 #services .service-item:after{
     content: '';
@@ -170,7 +181,16 @@ a{
     height: 100%;
     width: 100%;
     object-fit: cover;
-
+}
+#services .service-item h2{
+    font-size: 2rem;
+    color: white;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+#services .service-item p{
+    color: white;
+    text-align: left;
 }
 /* End Section Services */
 
