--- a/css/style.css
+++ b/css/style.css
@@ -129,9 +129,7 @@ p{
 
 /* End Hero Section */
 /* Section Services */
-#services{
 
-}
 #services .services{
     flex-direction: column;
     align-items: center;
@@ -314,6 +312,13 @@ p{
     z-index: -1;
 }
 /* End About Section */
+
+
+/* Contact Section */
+
+
+
+/* End Contact Section */
 
 /* Keyframes */
 @keyframes text_reveal_box{
