--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,14 @@ p{
     font-weight: 300;
     letter-spacing: .05rem;
 }
+.brand h1{
+    font-size: 3rem;
+    text-transform: uppercase;
+    color: white;
+}
+.brand h1 span{
+    color: crimson;
+}
 .cta{
     display: inline-block;
     padding: 10px 30px;
@@ -356,6 +364,48 @@ p{
     font-weight: 500;
 }
 /* End Contact Section */
+
+
+/* Footer */
+#footer{
+    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+}
+#footer .footer{
+    flex-direction: column;
+    min-height: 200px;
+    padding-top: 50px;
+    padding-bottom: 10px;
+}
+#footer h2{
+    color: white;
+    font-weight: 500;
+    font-size: 1.8rem;
+    letter-spacing: 0.1rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#footer .social-icon{
+    display: flex;
+    margin-bottom: 30px;
+}
+#footer .social-item{
+    height: 50px;
+    width: 50px;
+    margin: 0 5px;
+}
+#footer .social-item img{
+    filter: grayscale(0);
+    transition: .3s ease filter;
+}
+#footer .social-item:hover img{
+    filter: grayscale(1);
+}
+/* End Footer */
+#footer p{
+    color: white;
+    font-size: 1.3rem;
+}
 
 /* Keyframes */
 @keyframes text_reveal_box{
